--- a/app/views/layouts/_disqus_comments.html.erb
+++ b/app/views/layouts/_disqus_comments.html.erb
@@ -6,7 +6,7 @@
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
         <script type="text/javascript">
-        var disqus_shortname = '<%= DISQUS_SHORTNAME %>';
+        var disqus_shortname = '<%= Delve::Config.disqus_shortname %>';
         var disqus_identifier = "<%= disqus_id %>";
         var disqus_url = "<%= disqus_url %>";
         var disqus_title = '<%= disqus_title %>';
