--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,8 +22,15 @@
             .nav-collapse.collapse
               %ul.nav
                 %li
-                  = link_to 'Recipes', recipe_gallery_index_path
+                  = link_to 'Home', root_path
                 %li
+                  = link_to 'Recipes', recipe_gallery_index_path
+                %li.dropdown
+                  = link_to 'Resources', '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'}
+                  %ul.dropdown-menu
+                    %li= link_to 'Ingredients', '#'
+                    %li= link_to 'Techniques', '#'
+                    %li= link_to 'Science', '#'
 
 
     .container
