--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,23 @@
+.row
+  .span12
+    .carousel.slide#recipe-carousel
+      .carousel-inner
+        - @recipes.each_with_index do |recipe, index|
+          - if index == 0
+            .item.active
+              = image_tag s3_image_url(recipe.step_images.last)
+              .carousel-caption
+                %h4= recipe.title
+          - else
+            .item
+              = image_tag s3_image_url(recipe.step_images.last)
+              .carousel-caption
+                %h4= recipe.title
+      = link_to '&lsaquo;'.html_safe, '#recipe-carousel', class: 'carousel-control left', data: {slide: 'prev'}
+      = link_to '&rsaquo;'.html_safe, '#recipe-carousel', class: 'carousel-control right', data: {slide: 'next'}
+
+- #TODO[huy] Remove old code below
+
 / - content_for :title, ""
 / - content_for :description, "Free online cooking school from key members of the Modernist Cuisine team. Our first course will teach you everything you need to know about sous vide cooking."
 
