--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,6 +31,8 @@
                     %li= link_to 'Ingredients', '#'
                     %li= link_to 'Techniques', '#'
                     %li= link_to 'Science', '#'
+                %li
+                  = link_to 'Sign in', sign_in_path
 
 
     .container#main-container
