--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -13,6 +13,7 @@
     = f.input :transcript
     = f.input :timing
     = f.input :difficulty, as: :select, collection: Activity.difficulty_enum
+    = f.input :yield
 
   = section("Ingredients", f) do
     %li= copy_button 'Add Ingredient', '#ingredient-row', 'table#ingredients'
