--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -113,6 +113,9 @@
           ChefSteps is a totally new approach to learning the art and science of cooking. Whether you are a professional chef, a culinary student, or a cooking enthusiast, if you are also a curious cook then ChefSteps is for you.
         %p
           Taught by a world-renowned team, you will master techniques of traditional and modernist cooking through practical, hands-on demonstrations with detailed step-by-step explanations. Unlike at other culinary schools, you will also learn the why's behind the how's from experts who bring the science of cooking to life in a compelling and practical way.
+        - 3.times do
+          .span1
+            = image_tag 'http://placehold.it/100 x100', class:'img-circle'
       .span2
         %ul.unstyled
           %li
