--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,9 +28,44 @@
                 %li.dropdown
                   = link_to 'Resources', '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'}
                   %ul.dropdown-menu
-                    %li= link_to 'Ingredients', '#'
-                    %li= link_to 'Techniques', '#'
-                    %li= link_to 'Science', '#'
+                    %li
+                      %h5 Ingredients
+                      = link_to '#' do
+                        .media
+                          .pull-left
+                            = image_tag 'http://placehold.it/50x50', class:'media-object'
+                          .media-body
+                            %h4.media-heading Ingredient Title
+                            %p Ingredient Description
+                      = link_to '#' do
+                        .media
+                          .pull-right
+                            See More Ingredients
+                      %h5 Techniques
+                      = link_to '#' do
+                        .media
+                          .pull-left
+                            = image_tag 'http://placehold.it/50x50', class:'media-object'
+                          .media-body
+                            %h4.media-heading Technique Title
+                            %p Technique Description
+                      = link_to '#' do
+                        .media
+                          .pull-right
+                            See More Techniques
+                      %h5 Science of
+                      = link_to '#' do
+                        .media
+                          .pull-left
+                            = image_tag 'http://placehold.it/50x50', class:'media-object'
+                          .media-body
+                            %h4.media-heading Science of Title
+                            %p Science of Description
+                      = link_to '#' do
+                        .media
+                          .pull-right
+                            See More Science
+
                 %li
                   = link_to 'Sign in', sign_in_path
 
